fixed chart page styling. fixed account page form labels for dark mode

--- a/client/src/components/movements/Movements.module.css
+++ b/client/src/components/movements/Movements.module.css
@@ -2,7 +2,7 @@
 .movements {
 	display: flex;
 	overflow-y: auto;
-	font-family: 'poppins';
+	font-family: 'system-ui';
 	margin-top: 0.5rem;
 	margin-bottom: 0.75rem;
 	padding: 0.5rem;
@@ -11,24 +11,12 @@
 .movements__row {
 	flex-grow: 1;
 	flex-direction: column;
-	/* padding: 0.5rem; */
 	display: flex;
-	/* margin-top: 1rem;
-	margin-bottom: 1rem; */
 	width: 100%;
 }
 
-.movements__type {
-	font-size: 1.3rem;
-	text-transform: uppercase;
-	font-weight: 500;
-	color: #fff;
-	padding: 0.1rem 1rem;
-	border-radius: 10rem;
-}
-
 .movements__date {
-	font-size: 1.2rem;
+	font-size: 1rem;
 	text-transform: uppercase;
 	font-weight: 500;
 	margin-top: 5px;
@@ -36,7 +24,7 @@
 }
 
 .movements__date__dark {
-	font-size: 1.2rem;
+	font-size: 1rem;
 	text-transform: uppercase;
 	font-weight: 500;
 	margin-top: 5px;
@@ -82,11 +70,13 @@
 }
 
 .movements__category {
-	font-size: 1.3rem;
+	font-family: 'system-ui';
+	font-size: 1.2rem;
 }
 
 .movements__category__dark {
-	font-size: 1.3rem;
+	font-family: 'system-ui';
+	font-size: 1.2rem;
 	color: #d6d3d1;
 }
 
